OpenVi 7.0.12 -> OpenVi 7.0.13-dev: Mon Feb 21 06:06:42 2022
        + Use fancy quotes in `README.md`
        + Update `.gitignore` to add `compile_commands.json`
        + Suppress a few possible warnings
        + Since HiDPI screens are more common, allow terminal dimensions of
          3640x2048; this might need to be further extended for 4K displays

OpenVi 7.0.11 -> OpenVi 7.0.12: Sun Feb 20 12:57:42 2022
        + Update `README.md` with some background info and rationale
        + Always use internal reallocarray; closes GitHub Issue #5

OpenVi 7.0.10 -> OpenVi 7.0.11: Sat Feb 12 19:42:28 2022
        + Silence a few more warnings; adjust default debugging `CFLAGS`
        + Add an initial regex man page (which is not yet installed),
          `docs/USD.doc/re_format/vi_regex.7`
        + Update `LICENSE.md`; fix email address for `millert@`
        + Simplify `db/sys/issetugid.c` ifdef's
        + Update bundled *OpenBSD* cclass.h to `1.7` (2020/12/30 08:54:42)
        + Update bundled *OpenBSD* cname.h to `1.6` (2020/12/30 08:53:30)
        + Update bundled *OpenBSD* engine.c to `1.26` (2020/12/28 21:41:55)
        + Update bundled *OpenBSD* regerror.c to `1.15` (2020/12/30 08:56:38)
        + Update bundled *OpenBSD* regex2.h to `1.12` (2021/01/03 17:07:58)
        + Update bundled *OpenBSD* regexec.c to `1.14` (2018/07/11 12:38:46)
        + Update bundled *OpenBSD* regcomp.c to `1.43` (2021/01/03 17:07:57)
        + Update bundled *OpenBSD* strlcpy to `1.16` (2019/01/25 00:19:25)
        + Update bundled *OpenBSD* reallocarray to `1.3` (2015/09/13 08:31:47)
        + Update bundled *OpenBSD* getopt_long to `1.32` (2020/05/27 22:25:09)
        + Update bundled *OpenBSD* basename to `1.17` (2020/10/20 19:30:14)
        + Add initial *Midipix* support

OpenVi 7.0.9 -> OpenVi 7.0.10: Wed Feb 9 16:36:25 2022
        + Silence some warnings and general style clean-up
        + Clarify text of some visual mode messages; use the POSIX thousands