@@ -1,4 +1,6 @@
-OpenVi 7.0.12 -> OpenVi 7.0.13-dev: Mon Feb 21 06:06:42 2022
+OpenVi 7.0.12 -> OpenVi 7.0.13-dev: Mon Feb 21 08:30:26 2022
+        + Fixes for `vi` recovery mode. From `trondd@`, tested by various,
+          ok `afresh1@`
         + Use fancy quotes in `README.md`
         + Update `.gitignore` to add `compile_commands.json`
         + Suppress a few possible warnings
